welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: type mismatch;
 found   : Int
 required: String
                                       var dec:String=litMessage().toInt
                                                                   ^Array2:13: error: value - is not a member of String
                                       for (i<-1 to n-1) {setCouleurBrosse(T(i+dec-1));marque();avance()}
                                                                                  ^Array2:14: error: type mismatch;
 found   : String
 required: Int
                                       setCouleurBrosse(T(n-1+dec))
                                                             ^